# AgriPredict-Machine-Learning-Based-Crop-Yield-Forecasting

./: .gitignore  README.md  app.py  encoder_no_coconut.pkl  pyproject.toml  re.ipynb
.ipynb_checkpoints/: re-checkpoint.ipynb
