[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AgriPredict"
version = "1.0.0"
authors = [
  { name="Harshit Chauhan", email="your-email@example.com" },
]
description = "A Machine Learning powered tool for Indian Crop Yield Forecasting"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
dependencies = [
    "streamlit",
    "pandas",
    "scikit-learn",
    "numpy",
    "joblib",
]

[project.urls]
"Homepage" = "https://github.com/harshitchauhann95/AgriPredict-Machine-Learning-Based-Crop-Yield-Forecasting"
"Bug Tracker" = "https://github.com/harshitchauhann95/AgriPredict-Machine-Learning-Based-Crop-Yield-Forecasting/issues"

[tool.hatch.build.targets.wheel]
packages = ["app.py", "notebooks", "assets"]
